docs/cert-manager/kwixeerdbms.com/quixytestadminapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quixytestadminapi-kwixeerdbms-com-ingress
  namespace: quixy-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - quixytestadminapi.kwixeerdbms.com
    secretName: wildcard-kwixeerdbms-com-tls
  rules:
  - host: quixytestadminapi.kwixeerdbms.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminapi
            port:
              number: 5000
